Set max height for grid block icon containers to fix spacing issues with blocks that have no secondary categories

--- a/css/index.css
+++ b/css/index.css
@@ -635,6 +635,7 @@ input:checked + .settings-label:after {
 .grid-block-icons-container {
     width: 100%;
     height: 100%;
+    max-height: 42px;
 
     display: flex;
     justify-content: space-between;
